# miniblog

./: .gitignore  README.md  app.py  blog.db  model.py  pyproject.toml  schema.sql
templates/: index.html  view.html
